# outcome

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  schema.sql
docs/: failure_modes.md  resolution_design.md  state_machine.md  timing_design_note.md
rfq_engine/: engine.py  enums.py  errors.py  ledger.py  models.py  money.py  queries.py
tests/: conftest.py  helpers.py  test_accept_race.py  test_disputed_resolution.py  test_happy_path.py  test_mm_reservations.py  test_multileg_partial_fail.py  test_quote_expiry.py
